// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@onMissingBean 1`] = `"|constructConf2|Conf2|constructConf|conf1"`;

exports[`@onMissingBean 2 1`] = `"|constructConf|conf1|constructConf2"`;

exports[`@onMissingBean with multiple missing but just one is missing 1`] = `"|constructConf|conf1|constructConf2"`;

exports[`gabliam instance 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 2`] = `
Object {
  "config": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam/config",
  "scanPath": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam",
}
`;

exports[`gabliam instance 3`] = `
TestService {
  "dbConfig": DbConfig {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 4`] = `
DbConfig {
  "db": "test",
  "host": "127.0.0.1",
}
`;

exports[`gabliam instance with config path 1`] = `
Object {
  "config": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam/config",
}
`;

exports[`gabliam instance with path 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance with path 2`] = `
Object {
  "config": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam/config",
  "scanPath": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam",
}
`;

exports[`gabliam instance with path 3`] = `
TestService {
  "dbConfig": DbConfig {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance with path 4`] = `
DbConfig {
  "db": "test",
  "host": "127.0.0.1",
}
`;

exports[`plugin findByName 1`] = `
Object {
  "dependencies": Array [],
  "name": "BadPlugin",
  "plugin": BadPlugin {},
}
`;

exports[`should fail with Plugin with bad deps 1`] = `[Error: The plugin BadPlugin need the plugin BadDeps}]`;

exports[`test BeforeCreate & init 1`] = `"|Conf2|BeforeCreateConf2|create2|InitCreateConf2|Conf|BeforeCreateConf|create|InitCreateConf"`;

exports[`test BeforeCreate 1`] = `"|Conf2|BeforeCreateConf2|Conf|BeforeCreateConf"`;

exports[`test init 1`] = `"|Conf2|initConf2|Conf|initConf"`;

exports[`test plugin with config gabliam build 1`] = `2`;

exports[`test plugin with config gabliam build 2`] = `"Conf2Conf"`;
